--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           style="background-image: url('darazclone/a1.jpg')"
         ></div>
         <div class="price-sec">
-          <p>Ultima Airpods for 40 hr nonstop playback.</p>
+          <p>Ultima Airpods for 40 hrs nonstop playback.</p>
           <p id="price">Rs.999</p>
           <p id="cut">Rs.1500</p>
         </div>
